2007-01-23  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bvw_check_if_video_decoder_is_missing):
	(bvw_bus_message_cb):
	  If we can play a stream but are missing a video decoder,
	  pop up an error saying that a decoder is missing and which
	  one it is. (Closes: #171111)

2007-01-23  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Only force ximagesink for output if we actually KNOW the size, not
	  always.

2007-01-23  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_seek_time): When seeking destination is
	past the end of the stream, send an EOS, just like the xine-lib
	backend does

2007-01-23  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-tta to the list
	of supported mime-types

2007-01-22  Christian Persch  <chpe@svn.gnome.org>

	* browser-plugin/Makefile.am:
	* browser-plugin/totemBasicPlugin.cpp:
	A browser-plugin/totemClassInfo.h:
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemGMPPlugin.cpp:
	* browser-plugin/totemMullYPlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	* browser-plugin/totemNarrowSpacePlugin.h:
	Add macro to simplify classinfo implementation.

2007-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/Makefile.am: Patch from Christian Persch to fix
	the generation of totem-marshal.[ch] before files require
	them (Closes: #398604)

2007-01-20  Bastien Nocera  <hadess@hadess.net>

	* src/totem-video-thumbnailer.c: (main): Patch from
	Filip Palm <bugzilla@helmut.se> to call g_thread_init ASAP,
	avoid fatal warnings with glib trunk (Closes: #398223)

2007-01-19  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (create_lang_actions): Number duplicate
	languages in the subtitles and audio tracks menus, patch by
	Philip Withnall <bugzilla@tecnocode.co.uk> (Closes: #394063)
