@@ -831,6 +831,7 @@ AC_OUTPUT([
 Makefile
 totem.spec
 totem-plparser.pc
+totem-plparser-uninstalled.pc
 src/Makefile
 src/backend/Makefile
 src/plparse/Makefile
