@@ -1,3 +1,10 @@
+2007-01-24  Bastien Nocera  <hadess@hadess.net>
+
+	* configure.in:
+	* totem-plparser-uninstalled.pc.in: Patch from Brian Cameron
+	<brian.cameron@sun.com> to add a .pc file for the uninstalled
+	playlist parser (Closes: #340336)
+
 2007-01-23  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c:
